# skia-renderer

./: .gitignore  CMakeLists.txt  QUICKSTART.md  README.md  VERSION  build.py  build_all.bat  build_all.py  build_deps.bat  build_deps.py  build_unix.sh  build_windows.bat  build_windows.py  fix_skia_deps.bat  sync.py  sync_deps.bat  sync_deps.py  worklog.md
.github/workflows/: build-test.yml  bumpver.yml  release.yml  version-bump.yml
patches/: fix-d3d-backend-surface-operator.patch  skia-vma-vulkan-1.3.patch
src/: main.cpp
src/core/: Application.cpp  Application.h  Logger.h
src/renderer/: AngleContext.cpp  AngleContext.h  AngleRenderer.cpp  AngleRenderer.h  D3DContext.cpp  D3DContext.h  D3DRenderer.cpp  D3DRenderer.h  DemoRenderer.cpp  DemoRenderer.h  GLContext.cpp  GLContext.h  GLRenderer.cpp  GLRenderer.h  IRenderer.h  RendererFactory.cpp  RendererFactory.h  SceneRenderer.cpp  SceneRenderer.h  SkiaRenderer.cpp  SkiaRenderer.h  Swapchain.cpp  Swapchain.h  VulkanAllocator.cpp  VulkanAllocator.h  VulkanContext.cpp  VulkanContext.h
